dist_man1_MANS=

if BUILD_DIAZD
  dist_man1_MANS+=diazd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=diaz-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=diaz-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=diaz-wallet.1
endif
endif
