dist_man1_MANS=

if BUILD_DIAZD
  dist_man1_MANS+=diazd.1
endif

if ENABLE_QT
  dist_man1_MANS+=diaz-qt.1
endif

if BUILD_DIAZ_CLI
  dist_man1_MANS+=diaz-cli.1
endif

if BUILD_DIAZ_TX
  dist_man1_MANS+=diaz-tx.1
endif

if ENABLE_WALLET
if BUILD_DIAZ_WALLET
  dist_man1_MANS+=diaz-wallet.1
endif
endif
